# godot-mcp

./: .gitignore  README.md  pyproject.toml
godot_plugin/addons/godot_mcp/: godot_mcp_server.gd  mcp_debug_capture.gd  plugin.cfg  plugin.gd
src/godot_mcp/: server.py
