[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mcp"
version = "0.1.0"
description = "MCP server for controlling the Godot 4 editor"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
godot-mcp = "godot_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
